IMPLEMENTACION COMPLETA DE LAS VALIDACIONES PARA LOS CRUDS

--- a/SAFE_PARKING_FRONT/src/app/components/home-arrendador/home-arrendador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/home-arrendador/home-arrendador.component.html
@@ -22,7 +22,7 @@
     </head>
 
     <body>
-      <app-navbar-arrendador></app-navbar-arrendador>
+      <app-navbar-administrador></app-navbar-administrador>
       <div class="contenido-principal">
         <div class="textoPrincipal">
           <h1>Bienvenido al Portal Arrendador</h1>
