--- a/SAFE_PARKING_FRONT/src/app/components/home-conductor/home-conductor.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/home-conductor/home-conductor.component.html
@@ -19,7 +19,7 @@
     </head>
 
     <body>
-      <app-navbar-conductor></app-navbar-conductor>
+      <app-navbar-administrador></app-navbar-administrador>
 
       <div class="contenido-principal">
         <div class="textoPrincipal">
