--- a/SAFE_PARKING_FRONT/src/app/components/comentario/listar-admin-comentario/listar-admin-comentario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/listar-admin-comentario/listar-admin-comentario.component.html
@@ -2,95 +2,88 @@
 <div [hidden]="route.children.length !== 0">
   <!DOCTYPE html>
   <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Document</title>
-    </head>
-    <body>
-      <app-navbar-administrador></app-navbar-administrador>
 
-      <h2 style="text-align: center">LISTA DE COMENTARIOS</h2>
-      <div class="example-container">
-        <mat-form-field>
-          <input matInput (keyup)="filter($event)" placeholder="buscar" />
-        </mat-form-field>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
 
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-          <!--- Note that these columns can be defined in any order.
+  <body>
+    <app-navbar-administrador></app-navbar-administrador>
+
+    <h2 style="text-align: center">LISTA DE COMENTARIOS</h2>
+    <div class="example-container">
+      <mat-form-field>
+        <input matInput (keyup)="filter($event)" placeholder="buscar" />
+      </mat-form-field>
+
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <!--- Note that these columns can be defined in any order.
                   The actual rendered columns are set as a property on the row definition" -->
 
-          <!-- Position Column -->
-          <ng-container matColumnDef="codigo">
-            <th mat-header-cell *matHeaderCellDef>No.</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.idComentario }}
-            </td>
-          </ng-container>
+        <!-- Position Column -->
+        <ng-container matColumnDef="codigo">
+          <th mat-header-cell *matHeaderCellDef>No.</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.idComentario }}
+          </td>
+        </ng-container>
 
-          <!-- Name Column -->
-          <ng-container matColumnDef="contenido">
-            <th mat-header-cell *matHeaderCellDef>Contenido</th>
-            <td mat-cell *matCellDef="let element">{{ element.contenido }}</td>
-          </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="contenido">
+          <th mat-header-cell *matHeaderCellDef>Contenido</th>
+          <td mat-cell *matCellDef="let element">{{ element.contenido }}</td>
+        </ng-container>
 
-          <!-- Weight Column -->
-          <ng-container matColumnDef="valoracion">
-            <th mat-header-cell *matHeaderCellDef>Valoracion</th>
-            <td mat-cell *matCellDef="let element">{{ element.valoracion }}</td>
-          </ng-container>
+        <!-- Weight Column -->
+        <ng-container matColumnDef="valoracion">
+          <th mat-header-cell *matHeaderCellDef>Valoracion</th>
+          <td mat-cell *matCellDef="let element">{{ element.valoracion }}</td>
+        </ng-container>
 
-          <!-- Symbol Column -->
-          <ng-container matColumnDef="fechacreacion">
-            <th mat-header-cell *matHeaderCellDef>Fecha de creacion</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.fechaCreacion }}
-            </td>
-          </ng-container>
-          <!-- Symbol Column -->
-          <ng-container matColumnDef="idUsuario">
-            <th mat-header-cell *matHeaderCellDef>id de la reserva</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.reservaEstacionamiento.idReservaEstacionamiento }}
-            </td>
-          </ng-container>
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="fechacreacion">
+          <th mat-header-cell *matHeaderCellDef>Fecha de creacion</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.fechaCreacion }}
+          </td>
+        </ng-container>
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="idUsuario">
+          <th mat-header-cell *matHeaderCellDef>id de la reserva</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.reservaEstacionamiento.idReservaEstacionamiento }}
+          </td>
+        </ng-container>
 
-          <ng-container matColumnDef="modificar">
-            <th mat-header-cell *matHeaderCellDef>Acciones</th>
-            <td mat-cell *matCellDef="let element">
-              <button
-                mat-raised-button
-                color="primary"
-                [routerLink]="['/comentarios/ediciones/', element.idComentario]"
-              >
-                <mat-icon>edit</mat-icon> Editar
-              </button>
-            </td></ng-container
-          >
+        <ng-container matColumnDef="modificar">
+          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <td mat-cell *matCellDef="let element">
+            <button class="botoncito1" mat-raised-button
+              [routerLink]="['/comentarios/ediciones/', element.idComentario]">
+              <mat-icon>edit</mat-icon> 
+            </button>
+          </td>
+        </ng-container>
 
-          <ng-container matColumnDef="eliminar">
-            <th mat-header-cell *matHeaderCellDef>Acciones</th>
-            <td mat-cell *matCellDef="let element">
-              <button
-                mat-raised-button
-                color="warn"
-                (click)="eliminar(element.idComentario)"
-              >
-                <mat-icon>delete</mat-icon> Eliminar
-              </button>
-            </td>
-          </ng-container>
+        <ng-container matColumnDef="eliminar">
+          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <td mat-cell *matCellDef="let element">
+            <button class="botoncito2" mat-raised-button (click)="eliminar(element.idComentario)">
+              <mat-icon>delete</mat-icon> 
+            </button>
+          </td>
+        </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
-        <br />
-        <mat-paginator
-          [pageSizeOptions]="[5, 10, 25, 100]"
-          showFirstLastButtons
-        ></mat-paginator>
-        <br />
-      </div>
-    </body>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+      <br />
+      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons></mat-paginator>
+      <br />
+    </div>
+  </body>
+
   </html>
 </div>
