--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/listar-admin-estacionamiento/listar-admin-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/listar-admin-estacionamiento/listar-admin-estacionamiento.component.html
@@ -2,139 +2,125 @@
 <div [hidden]="route.children.length !== 0">
   <!DOCTYPE html>
   <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Document</title>
-    </head>
 
-    <body>
-      <app-navbar-administrador></app-navbar-administrador>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
 
-      <div class="litle">
-        <h2 style="text-align: center">LISTA DE ESTACIONAMIENTOS</h2>
-      </div>
+  <body>
+    <app-navbar-administrador></app-navbar-administrador>
 
-      <div class="example-container mat-elevation-z8">
-        <mat-form-field>
-          <input
-            style="text-align: left"
-            matInput
-            (keyup)="filter($event)"
-            placeholder="Bucar por.."
-          />
-        </mat-form-field>
-        <br />
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-          <!--- Note that these columns can be defined in any order.
+    <div class="litle">
+      <h2 style="text-align: center">LISTA DE ESTACIONAMIENTOS</h2>
+    </div>
+
+    <div class="example-container mat-elevation-z8">
+      <mat-form-field>
+        <input style="text-align: left" matInput (keyup)="filter($event)" placeholder="Bucar por.." />
+      </mat-form-field>
+      <br />
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <!--- Note that these columns can be defined in any order.
                 The actual rendered columns are set as a property on the row definition" -->
 
-          <!-- Position Column -->
-          <ng-container matColumnDef="idEstacionamiento" sticky>
-            <th mat-header-cell *matHeaderCellDef>ID</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.idEstacionamiento }}
-            </td>
-          </ng-container>
+        <!-- Position Column -->
+        <ng-container matColumnDef="idEstacionamiento" sticky>
+          <th mat-header-cell *matHeaderCellDef>ID</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.idEstacionamiento }}
+          </td>
+        </ng-container>
 
-          <!-- Name Column -->
-          <ng-container matColumnDef="tipoEstacionamiento">
-            <th mat-header-cell *matHeaderCellDef>tipoEstacionamiento</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.tipoEstacionamiento }}
-            </td>
-          </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="tipoEstacionamiento">
+          <th mat-header-cell *matHeaderCellDef>tipoEstacionamiento</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.tipoEstacionamiento }}
+          </td>
+        </ng-container>
 
-          <!-- Weight Column -->
-          <ng-container matColumnDef="disponibilidad">
-            <th mat-header-cell *matHeaderCellDef>disponibilidad</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.disponibilidad }}
-            </td>
-          </ng-container>
+        <!-- Weight Column -->
+        <ng-container matColumnDef="disponibilidad">
+          <th mat-header-cell *matHeaderCellDef>disponibilidad</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.disponibilidad }}
+          </td>
+        </ng-container>
 
-          <ng-container matColumnDef="foto">
-            <th mat-header-cell *matHeaderCellDef>foto</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.foto }}
-            </td>
-          </ng-container>
+        <ng-container matColumnDef="foto">
+          <th mat-header-cell *matHeaderCellDef>foto</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.foto }}
+          </td>
+        </ng-container>
 
-          <ng-container matColumnDef="promedioValoracion">
-            <th mat-header-cell *matHeaderCellDef>promedioValoracion</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.promedioValoracion }}
-            </td>
-          </ng-container>
+        <ng-container matColumnDef="promedioValoracion">
+          <th mat-header-cell *matHeaderCellDef>promedioValoracion</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.promedioValoracion }}
+          </td>
+        </ng-container>
 
-          <ng-container matColumnDef="capacidad">
-            <th mat-header-cell *matHeaderCellDef>capacidad</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.capacidad }}
-            </td>
-          </ng-container>
+        <ng-container matColumnDef="capacidad">
+          <th mat-header-cell *matHeaderCellDef>capacidad</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.capacidad }}
+          </td>
+        </ng-container>
 
-          <ng-container matColumnDef="fechaRegistro">
-            <th mat-header-cell *matHeaderCellDef>fechaRegistro</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.fechaRegistro }}
-            </td>
-          </ng-container>
+        <ng-container matColumnDef="fechaRegistro">
+          <th mat-header-cell *matHeaderCellDef>fechaRegistro</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.fechaRegistro }}
+          </td>
+        </ng-container>
 
-          <ng-container matColumnDef="precio">
-            <th mat-header-cell *matHeaderCellDef>precio</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.precio }}
-            </td>
-          </ng-container>
+        <ng-container matColumnDef="precio">
+          <th mat-header-cell *matHeaderCellDef>precio</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.precio }}
+          </td>
+        </ng-container>
 
-          <ng-container matColumnDef="usuario">
-            <th mat-header-cell *matHeaderCellDef>usuario</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.usuario.nombre }}
-            </td>
-          </ng-container>
+        <ng-container matColumnDef="usuario">
+          <th mat-header-cell *matHeaderCellDef>usuario</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.usuario.nombre }}
+          </td>
+        </ng-container>
 
-          <ng-container matColumnDef="localizacion">
-            <th mat-header-cell *matHeaderCellDef>localizacion</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.localizacion.idLocalizacion }}
-            </td>
-          </ng-container>
+        <ng-container matColumnDef="localizacion">
+          <th mat-header-cell *matHeaderCellDef>localizacion</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.localizacion.idLocalizacion }}
+          </td>
+        </ng-container>
 
-          <ng-container matColumnDef="accion01" stickyEnd>
-            <th mat-header-cell *matHeaderCellDef>Acciones</th>
-            <td mat-cell *matCellDef="let element">
-              <button
-                mat-raised-button
-                color="primary"
-                [routerLink]="['ediciones', element.idEstacionamiento]"
-              >
-                <mat-icon>edit</mat-icon> Editar
-              </button>
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="accion02" stickyEnd>
-            <th mat-header-cell *matHeaderCellDef>Acciones</th>
-            <td mat-cell *matCellDef="let element">
-              <button
-                mat-raised-button
-                color="warn"
-                (click)="eliminar(element.idEstacionamiento)"
-              >
-                <mat-icon>delete</mat-icon> Eliminar
-              </button>
-            </td>
-          </ng-container>
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
-        <br />
-        <mat-paginator
-          [pageSizeOptions]="[5, 10, 25, 100]"
-          showFirstLastButtons
-        ></mat-paginator>
-      </div>
-    </body>
+        <ng-container matColumnDef="accion01" stickyEnd>
+          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <td mat-cell *matCellDef="let element">
+            <button class = "botoncito1" mat-raised-button  [routerLink]="['ediciones', element.idEstacionamiento]">
+              <mat-icon>edit</mat-icon> 
+            </button>
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="accion02" stickyEnd>
+          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <td mat-cell *matCellDef="let element">
+            <button class = "botoncito2" mat-raised-button  (click)="eliminar(element.idEstacionamiento)">
+              <mat-icon>delete</mat-icon> 
+            </button>
+          </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+      <br />
+      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons></mat-paginator>
+    </div>
+  </body>
+
   </html>
 </div>
