--- a/SAFE_PARKING_FRONT/src/app/components/horario/listar-admin-horario/listar-admin-horario.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/horario/listar-admin-horario/listar-admin-horario.component.css
@@ -9,6 +9,7 @@ body {
 h2 {
   color: #333;
 }
+
 .container {
   width: 90%;
   padding: 20px;
@@ -25,6 +26,7 @@ h2 {
 table {
   width: 800px;
 }
+
 .example-container {
   height: 400px;
   width: 90%;
@@ -39,12 +41,14 @@ table {
 
   overflow: auto;
 }
+
 td.mat-column-star {
   width: 20px;
   padding-right: 8px;
 }
 
-th.mat-column-position, td.mat-column-position {
+th.mat-column-position,
+td.mat-column-position {
   padding-left: 8px;
 }
 
@@ -54,4 +58,18 @@ th.mat-column-position, td.mat-column-position {
 
 .mat-table-sticky:last-child {
   border-left: 1px solid #696969;
+}
+
+.botoncito1 {
+  background-color: #11998e;
+  color: #fff;
+  border-radius: 8px;
+  padding-right: 5px;
+}
+
+.botoncito2 {
+  background-color: #000000;
+  color: #fff;
+  border-radius: 8px;
+  padding-right: 5px;
 }
