--- a/SAFE_PARKING_FRONT/src/app/components/horario/listar-admin-horario/listar-admin-horario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/horario/listar-admin-horario/listar-admin-horario.component.html
@@ -56,12 +56,11 @@
           <ng-container matColumnDef="accion01">
             <th mat-header-cell *matHeaderCellDef>Acciones</th>
             <td mat-cell *matCellDef="let element">
-              <button
+              <button class = "botoncito1"
                 mat-raised-button
-                color="primary"
                 [routerLink]="['ediciones', element.idHorario]"
               >
-                <mat-icon>edit</mat-icon> Editar
+                <mat-icon>edit</mat-icon> 
               </button>
             </td>
           </ng-container>
@@ -69,12 +68,11 @@
           <ng-container matColumnDef="accion02">
             <th mat-header-cell *matHeaderCellDef>Acciones</th>
             <td mat-cell *matCellDef="let element">
-              <button
+              <button class = "botoncito2"
                 mat-raised-button
-                color="warn"
                 (click)="eliminar(element.idHorario)"
               >
-                <mat-icon>delete</mat-icon> Eliminar
+                <mat-icon>delete</mat-icon> 
               </button>
             </td>
           </ng-container>
