--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/localizaciones.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/localizaciones.component.html
@@ -1,2 +1,3 @@
-<div [hidden]="route.children.length !== 0"></div>
+<div [hidden]="route.children.length !== 0">
+</div>
 <router-outlet></router-outlet>
