--- a/SAFE_PARKING_FRONT/src/app/components/membresia/listar-admin-membresia/listar-admin-membresia.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/membresia/listar-admin-membresia/listar-admin-membresia.component.css
@@ -25,3 +25,15 @@ h2 {
   color: #333;
   padding-top:30px;
 }
+.botoncito1{
+  background-color: #11998e;
+  color: #fff;
+  border-radius: 8px;
+  padding-right: 5px;
+}
+.botoncito2{
+  background-color: #000000;
+  color: #fff;
+  border-radius: 8px;
+  padding-right: 5px;
+}
