--- a/SAFE_PARKING_FRONT/src/app/components/pago/listar-admin-pago/listar-admin-pago.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/pago/listar-admin-pago/listar-admin-pago.component.html
@@ -2,100 +2,86 @@
 <div [hidden]="route.children.length !== 0">
   <!DOCTYPE html>
   <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Document</title>
-    </head>
 
-    <body>
-      <app-navbar-administrador></app-navbar-administrador>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
 
-      <div class="litle">
-        <h2 style="text-align: center">LISTA DE PAGOS</h2>
-      </div>
+  <body>
+    <app-navbar-administrador></app-navbar-administrador>
 
-      <div class="example-container">
-        <mat-form-field>
-          <input
-            style="text-align: left"
-            matInput
-            (keyup)="filter($event)"
-            placeholder="buscar"
-          />
-        </mat-form-field>
+    <div class="litle">
+      <h2 style="text-align: center">LISTA DE PAGOS</h2>
+    </div>
 
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-          <ng-container matColumnDef="idPago">
-            <th mat-header-cell *matHeaderCellDef>Id</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.idPago }}
-            </td>
-          </ng-container>
+    <div class="example-container">
+      <mat-form-field>
+        <input style="text-align: left" matInput (keyup)="filter($event)" placeholder="buscar" />
+      </mat-form-field>
 
-          <ng-container matColumnDef="fechaEmision">
-            <th mat-header-cell *matHeaderCellDef>Fecha de emisión</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.fechaEmision }}
-            </td>
-          </ng-container>
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <ng-container matColumnDef="idPago">
+          <th mat-header-cell *matHeaderCellDef>Id</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.idPago }}
+          </td>
+        </ng-container>
 
-          <ng-container matColumnDef="precioTotal">
-            <th mat-header-cell *matHeaderCellDef>Precio Total</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.precioTotal }}
-            </td>
-          </ng-container>
+        <ng-container matColumnDef="fechaEmision">
+          <th mat-header-cell *matHeaderCellDef>Fecha de emisión</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.fechaEmision }}
+          </td>
+        </ng-container>
 
-          <ng-container matColumnDef="tipoPago">
-            <th mat-header-cell *matHeaderCellDef>Metodo de Pago</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.tipoPago }}
-            </td>
-          </ng-container>
+        <ng-container matColumnDef="precioTotal">
+          <th mat-header-cell *matHeaderCellDef>Precio Total</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.precioTotal }}
+          </td>
+        </ng-container>
 
-          <ng-container matColumnDef="reservaEstacionamiento">
-            <th mat-header-cell *matHeaderCellDef>Usuario</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.reservaEstacionamiento.idReservaEstacionamiento }}
-            </td>
-          </ng-container>
+        <ng-container matColumnDef="tipoPago">
+          <th mat-header-cell *matHeaderCellDef>Metodo de Pago</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.tipoPago }}
+          </td>
+        </ng-container>
 
-          <ng-container matColumnDef="accion01">
-            <th mat-header-cell *matHeaderCellDef>Acciones</th>
-            <td mat-cell *matCellDef="let element">
-              <button
-                mat-raised-button
-                color="primary"
-                [routerLink]="['ediciones', element.idPago]"
-              >
-                <mat-icon>edit</mat-icon> Editar
-              </button>
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="accion02">
-            <th mat-header-cell *matHeaderCellDef>Acciones</th>
-            <td mat-cell *matCellDef="let element">
-              <button
-                mat-raised-button
-                color="warn"
-                (click)="eliminar(element.idPago)"
-              >
-                <mat-icon>delete</mat-icon> Eliminar
-              </button>
-            </td>
-          </ng-container>
+        <ng-container matColumnDef="reservaEstacionamiento">
+          <th mat-header-cell *matHeaderCellDef>Usuario</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.reservaEstacionamiento.idReservaEstacionamiento }}
+          </td>
+        </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
-        <br />
+        <ng-container matColumnDef="accion01">
+          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <td mat-cell *matCellDef="let element">
+            <button class="botoncito1" mat-raised-button [routerLink]="['ediciones', element.idPago]">
+              <mat-icon>edit</mat-icon> 
+            </button>
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="accion02">
+          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <td mat-cell *matCellDef="let element">
+            <button class="botoncito2" mat-raised-button (click)="eliminar(element.idPago)">
+              <mat-icon>delete</mat-icon> 
+            </button>
+          </td>
+        </ng-container>
 
-        <mat-paginator
-          [pageSizeOptions]="[5, 10, 25]"
-          showFirstLastButtons
-        ></mat-paginator>
-      </div>
-    </body>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+      <br />
+
+      <mat-paginator [pageSizeOptions]="[5, 10, 25]" showFirstLastButtons></mat-paginator>
+    </div>
+  </body>
+
   </html>
 </div>
