--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/creaedita-localizaciones/creaedita-localizaciones.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/creaedita-localizaciones/creaedita-localizaciones.component.css
@@ -18,6 +18,7 @@ body {
   background: linear-gradient(to right, #11998e, #38ef7d);
   padding: 20px;
   margin-left: 250px;
+  height: auto;
 
 }
 .longitudes{
