--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/buscar-estacionamiento/buscar-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/buscar-estacionamiento/buscar-estacionamiento.component.css
@@ -16,6 +16,7 @@ body{
     background: linear-gradient(to right, #11998e, #38ef7d);
     padding: 30px;
     margin-left: 250px;
+     height: auto;
 
 
 }
