--- a/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/creaedita-horario-estacionamiento/creaedita-horario-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/creaedita-horario-estacionamiento/creaedita-horario-estacionamiento.component.css
@@ -7,12 +7,13 @@
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin:  auto;
+  margin-top: 100px;
   /* Centra horizontalmente */
 }
 body {
   font-family: Arial, sans-serif;
   background: linear-gradient(to right, #11998e, #38ef7d);
-  padding: 140px;
+  padding: 30px;
   margin-left: 250px;
 
 }
