--- a/SAFE_PARKING_FRONT/src/app/components/horario/listar-usuario-horario/listar-usuario-horario.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/horario/listar-usuario-horario/listar-usuario-horario.component.css
@@ -11,7 +11,7 @@
   body {
     font-family: Arial, sans-serif;
     background: linear-gradient(to right, #11998e, #38ef7d);
-    height:300%;
+    height:auto;
     padding: 20px;
     margin-left: 250px;
 
