--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/buscar-localizaciones/buscar-localizaciones.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/buscar-localizaciones/buscar-localizaciones.component.css
@@ -11,6 +11,7 @@ body {
   color: #333;
   padding: 30px;
   margin-left: 250px;
+  height: auto;
 
 }
 
@@ -63,7 +64,7 @@ button:hover {
 
 /* Mapa */
 .map-container {
-  width: 90%;
+  width: 50%;
   height: 400px;
   border-radius: 5px;
   margin: 40px auto; /* Centrar horizontalmente */
