--- a/SAFE_PARKING_FRONT/src/app/components/comentario/listar-admin-comentario/listar-admin-comentario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/listar-admin-comentario/listar-admin-comentario.component.html
@@ -54,27 +54,27 @@
         </ng-container>
 
         <ng-container matColumnDef="modificar">
-          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <th mat-header-cell *matHeaderCellDef>Editar</th>
           <td mat-cell *matCellDef="let element">
             <button
+              class="botoncito1"
               mat-raised-button
-              color="primary"
               [routerLink]="['/comentarios/ediciones/', element.idComentario]"
             >
-              <mat-icon>edit</mat-icon> Editar
+              <mat-icon>edit</mat-icon>
             </button>
-          </td></ng-container
-        >
+          </td>
+        </ng-container>
 
         <ng-container matColumnDef="eliminar">
-          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <th mat-header-cell *matHeaderCellDef>Eliminar</th>
           <td mat-cell *matCellDef="let element">
             <button
+              class="botoncito2"
               mat-raised-button
-              color="warn"
               (click)="eliminar(element.idComentario)"
             >
-              <mat-icon>delete</mat-icon> Eliminar
+              <mat-icon>delete</mat-icon>
             </button>
           </td>
         </ng-container>
