--- a/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/listar-admin-horario-estacionamiento/listar-admin-horario-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/listar-admin-horario-estacionamiento/listar-admin-horario-estacionamiento.component.css
@@ -44,4 +44,16 @@ th.mat-column-position, td.mat-column-position {
 .mat-table-sticky:last-child {
   border-left: 1px solid #696969;
 }
+.botoncito1{
+  background-color: #11998e;
+  color: #fff;
+  border-radius: 8px;
+  padding-right: 5px;
+}
+.botoncito2{
+  background-color: #000000;
+  color: #fff;
+  border-radius: 8px;
+  padding-right: 5px;
+}
 
