--- a/SAFE_PARKING_FRONT/src/app/components/incidente/listar-admin-incidente/listar-admin-incidente.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/listar-admin-incidente/listar-admin-incidente.component.html
@@ -56,26 +56,26 @@
         </ng-container>
 
         <ng-container matColumnDef="accion01">
-          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <th mat-header-cell *matHeaderCellDef>Editar</th>
           <td mat-cell *matCellDef="let element">
             <button
+              class="botoncito1"
               mat-raised-button
-              color="primary"
               [routerLink]="['ediciones', element.idIncidente]"
             >
-              <mat-icon>edit</mat-icon> Editar
+              <mat-icon>edit</mat-icon>
             </button>
           </td>
         </ng-container>
         <ng-container matColumnDef="accion02">
-          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <th mat-header-cell *matHeaderCellDef>Eliminar</th>
           <td mat-cell *matCellDef="let element">
             <button
+              class="botoncito2"
               mat-raised-button
-              color="warn"
               (click)="eliminar(element.idIncidente)"
             >
-              <mat-icon>delete</mat-icon> Eliminar
+              <mat-icon>delete</mat-icon>
             </button>
           </td>
         </ng-container>
