--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-admin-localizaciones/listar-admin-localizaciones.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-admin-localizaciones/listar-admin-localizaciones.component.css
@@ -17,7 +17,6 @@ h2 {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin: 0 auto;
   /* Centra horizontalmente */
-
   overflow: auto;
 }
 
@@ -51,4 +50,16 @@ th.mat-column-position, td.mat-column-position {
 
 .mat-table-sticky:last-child {
   border-left: 1px solid #696969;
+}
+.botoncito1{
+  background-color: #11998e;
+  color: #fff;
+  border-radius: 8px;
+  padding-right: 5px;
+}
+.botoncito2{
+  background-color: #000000;
+  color: #fff;
+  border-radius: 8px;
+  padding-right: 5px;
 }
