--- a/SAFE_PARKING_FRONT/src/app/components/vehiculos/listar-admin-vehiculos/listar-admin-vehiculos.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/vehiculos/listar-admin-vehiculos/listar-admin-vehiculos.component.html
@@ -88,26 +88,26 @@
         </ng-container>
 
         <ng-container matColumnDef="accion01" stickyEnd>
-          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <th mat-header-cell *matHeaderCellDef>editar</th>
           <td mat-cell *matCellDef="let element">
             <button
               mat-raised-button
-              color="primary"
+              class="botoncito1"
               [routerLink]="['ediciones', element.idVehiculo]"
             >
-              <mat-icon>edit</mat-icon> Editar
+              <mat-icon>edit</mat-icon>
             </button>
           </td>
         </ng-container>
         <ng-container matColumnDef="accion02" stickyEnd>
-          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <th mat-header-cell *matHeaderCellDef>Eliminar</th>
           <td mat-cell *matCellDef="let element">
             <button
               mat-raised-button
-              color="warn"
+              class="botoncito2"
               (click)="eliminar(element.idVehiculo)"
             >
-              <mat-icon>delete</mat-icon> Eliminar
+              <mat-icon>delete</mat-icon>
             </button>
           </td>
         </ng-container>
