--- a/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
@@ -481,7 +481,7 @@
         </ul>
 
         <input type="checkbox" class="menu-toggle" />
-        <label for="menu16" class="menu" routerLink="/login" (click)="cerrar()">
+        <label for="menu16" class="menu" (click)="confirmarSalir()">
           <i class="material-icons">logout</i>
           Salir
         </label>
